Fix: fix the page overflow

--- a/instagram-frontend/src/core/app.css
+++ b/instagram-frontend/src/core/app.css
@@ -6,6 +6,11 @@ body {
   box-sizing: border-box;
 }
 
+
+html {
+  overflow-y: scroll;
+}
+
 /* clicked links should not change color */
 
 a {
