--- a/instagram-frontend/src/scenes/User/components/UserPosts/userPosts.scss
+++ b/instagram-frontend/src/scenes/User/components/UserPosts/userPosts.scss
@@ -40,7 +40,7 @@
         &::before {
           content: "";
           position: absolute;
-          top: 0;
+          top: -1px;
           left: 0;
           width: 100%;
           display: block;
